# Bachelorthesis

./: CMakeLists.txt  README.md  package.xml
config/: bridge.yaml  bridge.yaml:Zone.Identifier  bridge_multi_shared.yaml  bridge_multi_shared_without_camera.yaml  bridge_per_robot.yaml  bridge_per_robot_without_camera.yaml  display.rviz
drive/: drive.py:Zone.Identifier
launch/: gazebo.launch.py  gazebo.launch.py:Zone.Identifier  gazebo_launch.py  gazebo_multi_robot.launch.py  gazebo_multi_robot.launch.py:Zone.Identifier  multi_robot_gazebo.launch.py  multi_robot_gazebo_launch.py  multi_robot_gazebo_launchaaaa.py  multi_robot_gazebo_launchferttog.py  multi_robot_gazebo_launchfunktio.py  my_robot.launch.py  my_robot_gazebo_launch.py  my_robot_launch.py
models/: Kamera_hinten.stl  Kamera_hinten_unten.stl  Kamera_links.stl  Kamera_rechts.stl  Kamera_vorne.stl  Kamera_vorne_unten.stl  Lidar.stl  Rad_rechts.stl  Unterteil.stl  brush_rIght.stl  camera_front.stl  camera_right.stl  wheel_front.stl  wheel_left.stl
scripts/: autonomous.py  autonomousbug.py  autonomousv1.py  autonomousv2.py  autonomousv3.py  emergency_controller.py  manually.py  manuallyfertig.py
urdf/: my_robot.gv  my_robot_description.urdf  my_robot_description.urdf:Zone.Identifier  my_robot_description_V1.0.urdf  my_robot_description_V2.0.urdf
worlds/: airport_terminal.sdf  airport_terminal.sdf:Zone.Identifier  airport_terminal_world.sdf  my_world.sdf  my_world.sdf:Zone.Identifier  my_world1.sdf  versuch.sdf
