<?xml version="1.0"?>
<package format="3">
  <version>0.1.0</version>
  <license>Apache-2.0</license>
  <name>my_robot_description</name>
  <description>My robot description package</description>
  <maintainer email="elvis@todo.todo">elvis</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>