<?xml version="1.0"?>
<package format="3">
  <name>my_robot_gazebo</name>
  <version>0.1.0</version>
  <license>Apache-2.0</license>
  <description>My robot gazebo package</description>
  <maintainer email="elvis@todo.todo">elvis</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>